# ProcessMappingAnalyzer

./: .gitignore  CMakeLists.txt  ReadMe.md  build.sh  main.cpp
data/partitions/: cop20k_A.mtx.graph.partition.txt
src/: definitions.h  graph.h  partition_util.cpp  partition_util.h  util.cpp  util.h
